--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Gonzalo Chechi Freelancer</h1>
+        <h1>Gonzalo Chechi <span>Freelancer</span></h1>
     </header>
 
     <nav>
