estilos del nav

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
     <div class="navBg">
         <nav class="navPrincipal contenedor">
-            <a href="index.html">Iicio</a>
+            <a href="index.html">Inicio</a>
             <a href="#">Nosotros</a>
             <a href="#">Clientes</a>
             <a href="#">Contactos</a>
         </nav>
     </div>
-    <section>
+    <section class="hero contenedor">
         <h2>Diseño y desarrollo web freelancer</h2>
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin-check" width="60"
+        <svg class="imgCheckpoint" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin-check" width="60"
             height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#687EFF" fill="none" stroke-linecap="round"
             stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
