--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <script src="js/navBar.js"></script>
     <script src="js/personas.js"></script>
     <script src="js/formulario.js"></script>
+    <script src="js/datosClientes.js"></script>
     
 
 </body>
