--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -17,19 +17,18 @@
     </header>
 
     <div class="navBg">
-        <nav class="navPrincipal contenedor">
+        <nav  class="navPrincipal contenedor">
             <a href="../index.html">Inicio</a>
             <a id="navNosotros" href="#">Nosotros</a>
             <a id="navClientes" href="#">Clientes</a>
             <a id="navContactos" href="#">Contactos</a>
         </nav>
     </div>
-    <div id="contenedorClientes">
+    <section id="sectionClientes">
 
-    </div>
-    <footer class="footer">
-        <p>Todos los derechos reservados Gonzalo Chechi Freelancer</p>
-    </footer>
+    </section>
+
+    
     <script src="../js/navBar.js"></script>
     <script src="../js/personas.js"></script>
     <script src="../js/formulario.js"></script>
