--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="es">
 
@@ -18,7 +17,7 @@
     </header>
 
     <div class="navBg">
-        <nav  class="navPrincipal contenedor">
+        <nav class="navPrincipal contenedor">
             <a href="../index.html">Inicio</a>
             <a id="navNosotros" href="#">Nosotros</a>
             <a id="navClientes" href="#">Clientes</a>
@@ -26,10 +25,10 @@
         </nav>
     </div>
     <section id="sectionClientes">
-
     </section>
-
-    
+    <footer class="footer">
+        <p>Todos los derechos reservados Gonzalo Chechi Freelancer</p>
+    </footer>
     <script src="../js/navBar.js"></script>
     <script src="../js/personas.js"></script>
     <script src="../js/formulario.js"></script>
@@ -37,5 +36,3 @@
 </body>
 
 </html>
-=======
->>>>>>> cf8dfdb6110ba5fee0460b8a0b926f292c5dac5f
