--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </svg>
                 <p>Mendoza, Argentina</p>
             </div>
-            <a href="#">Contactar</a>
+            <a class="boton" href="#">Contactar</a>
         </div>
     </section>
 
@@ -141,6 +141,7 @@
     </footer>
     <script src="js/navBar.js"></script>
     <script src="js/personas.js"></script>
+    <script src="js/funcionesAuxiliares.js"></script>
     <script src="js/formulario.js"></script>
     <script src="js/datosClientes.js"></script>
     
