--- a/pages/responder.html
+++ b/pages/responder.html
@@ -24,7 +24,7 @@
             <a id="navContactos" href="#">Contactos</a>
         </nav>
     </div>
-    <section id="sectionClientes">
+    <section id="respuestasClientes">
     </section>
     <footer class="footer">
         <p>Todos los derechos reservados Gonzalo Chechi Freelancer</p>
@@ -33,7 +33,7 @@
     <script src="../js/personas.js"></script>
     <script src="../js/formulario.js"></script>
     <script src="../js/funcionesAuxiliares.js"></script>
-    <script src="../js/datosClientes.js"></script>
+    <script src="../js/respuestas.js"></script>
 </body>
 
 </html>
