--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preload" href="css/style.css" as="style">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.2/dist/sweetalert2.min.css" rel="stylesheet">
 
     <title>Document</title>
 </head>
@@ -113,7 +114,7 @@
                     <div class="camposFormIndex">
                         <div class="campo">
                             <label for="nombre">Nombre</label>
-                            <input class="inputText" type="text" name="nombre" placeholder="Tu Nombre" id="nombre" >
+                            <input class="inputText" type="text" name="nombre" placeholder="Tu Nombre" id="nombre">
                         </div>
                         <div class="campo">
                             <label for="telefono">Teléfono</label>
@@ -121,7 +122,7 @@
                         </div>
                         <div class="campo correo">
                             <label for="correo">Correo</label>
-                            <input class="inputText" type="email" name="correo" placeholder="Tu Correo" id="correo" >
+                            <input class="inputText" type="email" name="correo" placeholder="Tu Correo" id="correo">
                         </div>
                         <div class="campo textarea">
                             <label for="mensaje">Mensaje</label>
@@ -132,19 +133,18 @@
                         <input class="boton" type="submit" value="Enviar" id="submit">
                     </div>
                 </fieldset>
-
             </form>
         </section>
     </main>
     <footer class="footer">
         <p>Todos los derechos reservados Gonzalo Chechi Freelancer</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/navBar.js"></script>
     <script src="js/personas.js"></script>
     <script src="js/funcionesAuxiliares.js"></script>
     <script src="js/formulario.js"></script>
-    <script src="js/datosClientes.js"></script>
-    
+
 
 </body>
 
