--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="preload" href="../css/style.css" as="style">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.2/dist/sweetalert2.min.css" rel="stylesheet">
     <title>Datos Clientes</title>
 </head>
 
@@ -29,11 +30,12 @@
     <footer class="footer">
         <p>Todos los derechos reservados Gonzalo Chechi Freelancer</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/navBarClientes.js"></script>
     <script src="../js/personas.js"></script>
-    <script src="../js/formulario.js"></script>
     <script src="../js/funcionesAuxiliares.js"></script>
     <script src="../js/datosClientes.js"></script>
+    <script src="../js/respuestas.js"></script>
 </body>
 
 </html>
