--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
                     <div class="camposFormIndex">
                         <div class="campo">
                             <label for="nombre">Nombre</label>
-                            <input class="inputText" type="text" name="nombre" placeholder="Tu Nombre" id="nombre">
+                            <input class="inputText" type="text" name="nombre" placeholder="Tu Nombre" required id="nombre">
                         </div>
                         <div class="campo">
                             <label for="telefono">Teléfono</label>
-                            <input class="inputText" type="tel" name="telefono" placeholder="Tu Teléfono" id="tel">
+                            <input class="inputText" type="tel" name="telefono" placeholder="Tu Teléfono" required id="tel">
                         </div>
                         <div class="campo correo">
                             <label for="correo">Correo</label>
-                            <input class="inputText" type="email" name="correo" placeholder="Tu Correo" id="correo">
+                            <input class="inputText" type="email" name="correo" placeholder="Tu Correo"  required id="correo">
                         </div>
                         <div class="campo textarea">
                             <label for="mensaje">Mensaje</label>
-                            <textarea class="inputText" name="mensaje" id="mensaje"></textarea>
+                            <textarea class="inputText" name="mensaje" required id="mensaje"></textarea> 
                         </div>
                     </div>
                     <div class="botonFormIndex">
