--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -23,6 +23,7 @@
             <a id="navNosotros" href="#">Nosotros</a>
             <a id="navClientes" href="#">Clientes</a>
             <a id="navContactos" href="#">Contactos</a>
+            <a id="limpiarStorage" href="#">Limpiar Storage</a>
         </nav>
     </div>
     <section id="sectionClientes">
@@ -36,6 +37,7 @@
     <script src="../js/funcionesAuxiliares.js"></script>
     <script src="../js/datosClientes.js"></script>
     <script src="../js/respuestas.js"></script>
+    <script src="../js/enviarEmail.js"></script>
 </body>
 
 </html>
